
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int PAGE_SIZE ;
 int SHMMAX ;
 int SHMMNI ;
 int SHMSEG ;
 int cleanSysV () ;
 int exit (int) ;
 int fprintf (int ,char*) ;
 int len ;
 int myfree (char*) ;
 char* mymalloc (int) ;
 int perror (char*) ;
 int printf (char*,...) ;
 int stderr ;
 int strcmp (char*,char*) ;
 int strtol (char*,int *,int ) ;

int main(int argc, char **argv)
{
    int shmid;
    int i = 0;
    char *buf[SHMSEG * 2];
    int max;
    int offset;
    if(argc < 2)
    {
 printf("Usage: %s <[0x]size of segments>\n", argv[0]);

 printf("    or %s --clean (destroys all of IPC space you have permissions to)\n", argv[0]);

 exit(0);
    }


    if(!strcmp(argv[1], "--clean"))
    {
 cleanSysV();
 exit(0);
    }


    len = strtol(argv[1], ((void*)0), 0);
    for(buf[i] = mymalloc(len); i < SHMSEG * 2 && buf[i] != ((void*)0); buf[++i] = mymalloc(len))
 ;

    max = i;
    perror("Stopped because");
    printf("Maxed out at %d %d byte segments\n", max, len);
    for(i = 0; i <= max; i++)
    {
 myfree(buf[i]);
    }

    exit(42);
}
