; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/bsd/dos/extr_19423.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/bsd/dos/extr_19423.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SHMSEG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [34 x i8] c"Usage: %s <[0x]size of segments>\0A\00", align 1
@.str.1 = private unnamed_addr constant [71 x i8] c"    or %s --clean (destroys all of IPC space you have permissions to)\0A\00", align 1
@.str.2 = private unnamed_addr constant [8 x i8] c"--clean\00", align 1
@len = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [16 x i8] c"Stopped because\00", align 1
@.str.4 = private unnamed_addr constant [34 x i8] c"Maxed out at %d %d byte segments\0A\00", align 1
@PAGE_SIZE = common dso_local global i32 0, align 4
@SHMMAX = common dso_local global i32 0, align 4
@SHMMNI = common dso_local global i32 0, align 4
@stderr = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  store i32 0, i32* %7, align 4
  %12 = load i32, i32* @SHMSEG, align 4
  %13 = mul nsw i32 %12, 2
  %14 = zext i32 %13 to i64
  %15 = call i8* @llvm.stacksave()
  store i8* %15, i8** %8, align 8
  %16 = alloca i8*, i64 %14, align 16
  store i64 %14, i64* %9, align 8
  %17 = load i32, i32* %4, align 4
  %18 = icmp slt i32 %17, 2
  br i1 %18, label %19, label %29

19:                                               ; preds = %2
  %20 = load i8**, i8*** %5, align 8
  %21 = getelementptr inbounds i8*, i8** %20, i64 0
  %22 = load i8*, i8** %21, align 8
  %23 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0), i8* %22)
  %24 = load i8**, i8*** %5, align 8
  %25 = getelementptr inbounds i8*, i8** %24, i64 0
  %26 = load i8*, i8** %25, align 8
  %27 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([71 x i8], [71 x i8]* @.str.1, i64 0, i64 0), i8* %26)
  %28 = call i32 @exit(i32 0) #4
  unreachable

29:                                               ; preds = %2
  %30 = load i8**, i8*** %5, align 8
  %31 = getelementptr inbounds i8*, i8** %30, i64 1
  %32 = load i8*, i8** %31, align 8
  %33 = call i32 @strcmp(i8* %32, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.2, i64 0, i64 0))
  %34 = icmp ne i32 %33, 0
  br i1 %34, label %38, label %35

35:                                               ; preds = %29
  %36 = call i32 (...) @cleanSysV()
  %37 = call i32 @exit(i32 0) #4
  unreachable

38:                                               ; preds = %29
  %39 = load i8**, i8*** %5, align 8
  %40 = getelementptr inbounds i8*, i8** %39, i64 1
  %41 = load i8*, i8** %40, align 8
  %42 = call i32 @strtol(i8* %41, i32* null, i32 0)
  store i32 %42, i32* @len, align 4
  %43 = load i32, i32* @len, align 4
  %44 = call i8* @mymalloc(i32 %43)
  %45 = load i32, i32* %7, align 4
  %46 = sext i32 %45 to i64
  %47 = getelementptr inbounds i8*, i8** %16, i64 %46
  store i8* %44, i8** %47, align 8
  br label %48

48:                                               ; preds = %62, %38
  %49 = load i32, i32* %7, align 4
  %50 = load i32, i32* @SHMSEG, align 4
  %51 = mul nsw i32 %50, 2
  %52 = icmp slt i32 %49, %51
  br i1 %52, label %53, label %59

53:                                               ; preds = %48
  %54 = load i32, i32* %7, align 4
  %55 = sext i32 %54 to i64
  %56 = getelementptr inbounds i8*, i8** %16, i64 %55
  %57 = load i8*, i8** %56, align 8
  %58 = icmp ne i8* %57, null
  br label %59

59:                                               ; preds = %53, %48
  %60 = phi i1 [ false, %48 ], [ %58, %53 ]
  br i1 %60, label %61, label %69

61:                                               ; preds = %59
  br label %62

62:                                               ; preds = %61
  %63 = load i32, i32* @len, align 4
  %64 = call i8* @mymalloc(i32 %63)
  %65 = load i32, i32* %7, align 4
  %66 = add nsw i32 %65, 1
  store i32 %66, i32* %7, align 4
  %67 = sext i32 %66 to i64
  %68 = getelementptr inbounds i8*, i8** %16, i64 %67
  store i8* %64, i8** %68, align 8
  br label %48

69:                                               ; preds = %59
  %70 = load i32, i32* %7, align 4
  store i32 %70, i32* %10, align 4
  %71 = call i32 @perror(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.3, i64 0, i64 0))
  %72 = load i32, i32* %10, align 4
  %73 = load i32, i32* @len, align 4
  %74 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.4, i64 0, i64 0), i32 %72, i32 %73)
  store i32 0, i32* %7, align 4
  br label %75

75:                                               ; preds = %85, %69
  %76 = load i32, i32* %7, align 4
  %77 = load i32, i32* %10, align 4
  %78 = icmp sle i32 %76, %77
  br i1 %78, label %79, label %88

79:                                               ; preds = %75
  %80 = load i32, i32* %7, align 4
  %81 = sext i32 %80 to i64
  %82 = getelementptr inbounds i8*, i8** %16, i64 %81
  %83 = load i8*, i8** %82, align 8
  %84 = call i32 @myfree(i8* %83)
  br label %85

85:                                               ; preds = %79
  %86 = load i32, i32* %7, align 4
  %87 = add nsw i32 %86, 1
  store i32 %87, i32* %7, align 4
  br label %75

88:                                               ; preds = %75
  %89 = call i32 @exit(i32 42) #4
  unreachable
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @printf(i8*, ...) #2

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #3

declare dso_local i32 @strcmp(i8*, i8*) #2

declare dso_local i32 @cleanSysV(...) #2

declare dso_local i32 @strtol(i8*, i32*, i32) #2

declare dso_local i8* @mymalloc(i32) #2

declare dso_local i32 @perror(i8*) #2

declare dso_local i32 @myfree(i8*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
